infra/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: redbus
  labels:
    name: redbus
